--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,30 @@ body {
 	color: #333333;
 	background-color: #ffffff;
 	position: relative;
+	overflow-x: hidden;
 }
+
+/* width */
+body::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  /* Track */
+  body::-webkit-scrollbar-track {
+	background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  body::-webkit-scrollbar-thumb {
+	background: #888; 
+  }
+  
+  /* Handle on hover */
+  body::-webkit-scrollbar-thumb:hover {
+	background: #555; 
+  }
+
+
 h1,
 h2,
 h3,
@@ -147,7 +170,7 @@ width: 100%;
 }
 .banner-caption {
 	position: absolute;
-	top: 50%;
+	top: 30%;
 	width: 100%;
 	z-index: 2;
 }
